// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`creates project 1`] = `
<Modal
  contentLabel="modal form"
  onRequestClose={[MockFunction]}
>
  <form
    id="create-project-form"
    onSubmit={[Function]}
  >
    <header
      className="modal-head"
    >
      <h2>
        qualifiers.create.TRK
      </h2>
    </header>
    <div
      className="modal-body"
    >
      <div
        className="modal-field"
      >
        <label
          htmlFor="create-project-name"
        >
          name
          <em
            className="mandatory"
          >
            *
          </em>
        </label>
        <input
          autoFocus={true}
          id="create-project-name"
          maxLength={2000}
          name="name"
          onChange={[Function]}
          required={true}
          type="text"
          value=""
        />
      </div>
      <div
        className="modal-field"
      >
        <label
          htmlFor="create-project-key"
        >
          key
          <em
            className="mandatory"
          >
            *
          </em>
        </label>
        <input
          id="create-project-key"
          maxLength={400}
          name="key"
          onChange={[Function]}
          required={true}
          type="text"
          value=""
        />
      </div>
      <div
        className="modal-field"
      >
        <label>
          visibility
        </label>
        <VisibilitySelector
          className="little-spacer-top"
          onChange={[Function]}
          visibility="public"
        />
        <div
          className="spacer-top"
        >
          <UpgradeOrganizationBox
            organization="org"
          />
        </div>
      </div>
      <div
        className="modal-field big-spacer-top"
      >
        <a
          className="js-more text-muted note"
          href="#"
          onClick={[Function]}
        >
          more
        </a>
      </div>
    </div>
    <footer
      className="modal-foot"
    >
      <button
        disabled={false}
        id="create-project-submit"
        type="submit"
      >
        create
      </button>
      <a
        href="#"
        id="create-project-cancel"
        onClick={[Function]}
      >
        cancel
      </a>
    </footer>
  </form>
</Modal>
`;

exports[`creates project 2`] = `
<Modal
  contentLabel="modal form"
  onRequestClose={[MockFunction]}
>
  <form
    id="create-project-form"
    onSubmit={[Function]}
  >
    <header
      className="modal-head"
    >
      <h2>
        qualifiers.create.TRK
      </h2>
    </header>
    <div
      className="modal-body"
    >
      <div
        className="modal-field"
      >
        <label
          htmlFor="create-project-name"
        >
          name
          <em
            className="mandatory"
          >
            *
          </em>
        </label>
        <input
          autoFocus={true}
          id="create-project-name"
          maxLength={2000}
          name="name"
          onChange={[Function]}
          required={true}
          type="text"
          value="name"
        />
      </div>
      <div
        className="modal-field"
      >
        <label
          htmlFor="create-project-key"
        >
          key
          <em
            className="mandatory"
          >
            *
          </em>
        </label>
        <input
          id="create-project-key"
          maxLength={400}
          name="key"
          onChange={[Function]}
          required={true}
          type="text"
          value="key"
        />
      </div>
      <div
        className="modal-field"
      >
        <label>
          visibility
        </label>
        <VisibilitySelector
          className="little-spacer-top"
          onChange={[Function]}
          visibility="private"
        />
        <div
          className="spacer-top"
        >
          <UpgradeOrganizationBox
            organization="org"
          />
        </div>
      </div>
      <div
        className="modal-field big-spacer-top"
      >
        <a
          className="js-more text-muted note"
          href="#"
          onClick={[Function]}
        >
          more
        </a>
      </div>
    </div>
    <footer
      className="modal-foot"
    >
      <button
        disabled={false}
        id="create-project-submit"
        type="submit"
      >
        create
      </button>
      <a
        href="#"
        id="create-project-cancel"
        onClick={[Function]}
      >
        cancel
      </a>
    </footer>
  </form>
</Modal>
`;

exports[`creates project 3`] = `
<Modal
  contentLabel="modal form"
  onRequestClose={[MockFunction]}
>
  <form
    id="create-project-form"
    onSubmit={[Function]}
  >
    <header
      className="modal-head"
    >
      <h2>
        qualifiers.create.TRK
      </h2>
    </header>
    <div
      className="modal-body"
    >
      <div
        className="modal-field"
      >
        <label
          htmlFor="create-project-name"
        >
          name
          <em
            className="mandatory"
          >
            *
          </em>
        </label>
        <input
          autoFocus={true}
          id="create-project-name"
          maxLength={2000}
          name="name"
          onChange={[Function]}
          required={true}
          type="text"
          value="name"
        />
      </div>
      <div
        className="modal-field"
      >
        <label
          htmlFor="create-project-key"
        >
          key
          <em
            className="mandatory"
          >
            *
          </em>
        </label>
        <input
          id="create-project-key"
          maxLength={400}
          name="key"
          onChange={[Function]}
          required={true}
          type="text"
          value="key"
        />
      </div>
      <div
        className="modal-field"
      >
        <label>
          visibility
        </label>
        <VisibilitySelector
          className="little-spacer-top"
          onChange={[Function]}
          visibility="private"
        />
        <div
          className="spacer-top"
        >
          <UpgradeOrganizationBox
            organization="org"
          />
        </div>
      </div>
      <div
        className="modal-field big-spacer-top"
      >
        <a
          className="js-more text-muted note"
          href="#"
          onClick={[Function]}
        >
          more
        </a>
      </div>
    </div>
    <footer
      className="modal-foot"
    >
      <i
        className="spinner spacer-right"
      />
      <button
        disabled={true}
        id="create-project-submit"
        type="submit"
      >
        create
      </button>
      <a
        href="#"
        id="create-project-cancel"
        onClick={[Function]}
      >
        cancel
      </a>
    </footer>
  </form>
</Modal>
`;

exports[`creates project 4`] = `
<Modal
  contentLabel="modal form"
  onRequestClose={[MockFunction]}
>
  <div>
    <header
      className="modal-head"
    >
      <h2>
        qualifiers.create.TRK
      </h2>
    </header>
    <div
      className="modal-body"
    >
      <div
        className="alert alert-success"
      >
        <FormattedMessage
          defaultMessage="projects_management.project_has_been_successfully_created"
          id="projects_management.project_has_been_successfully_created"
          values={
            Object {
              "project": <Link
                onlyActiveOnIndex={false}
                style={Object {}}
                to={
                  Object {
                    "pathname": "/dashboard",
                    "query": Object {
                      "branch": undefined,
                      "id": "name",
                    },
                  }
                }
              >
                name
              </Link>,
            }
          }
        />
      </div>
    </div>
    <footer
      className="modal-foot"
    >
      <a
        href="#"
        id="create-project-close"
        onClick={[Function]}
      >
        close
      </a>
    </footer>
  </div>
</Modal>
`;

exports[`shows more 1`] = `
<Modal
  contentLabel="modal form"
  onRequestClose={[MockFunction]}
>
  <form
    id="create-project-form"
    onSubmit={[Function]}
  >
    <header
      className="modal-head"
    >
      <h2>
        qualifiers.create.TRK
      </h2>
    </header>
    <div
      className="modal-body"
    >
      <div
        className="modal-field"
      >
        <label
          htmlFor="create-project-name"
        >
          name
          <em
            className="mandatory"
          >
            *
          </em>
        </label>
        <input
          autoFocus={true}
          id="create-project-name"
          maxLength={2000}
          name="name"
          onChange={[Function]}
          required={true}
          type="text"
          value=""
        />
      </div>
      <div
        className="modal-field"
      >
        <label
          htmlFor="create-project-key"
        >
          key
          <em
            className="mandatory"
          >
            *
          </em>
        </label>
        <input
          id="create-project-key"
          maxLength={400}
          name="key"
          onChange={[Function]}
          required={true}
          type="text"
          value=""
        />
      </div>
      <div
        className="modal-field"
      >
        <label>
          visibility
        </label>
        <VisibilitySelector
          className="little-spacer-top"
          onChange={[Function]}
          visibility="public"
        />
        <div
          className="spacer-top"
        >
          <UpgradeOrganizationBox
            organization="org"
          />
        </div>
      </div>
      <div
        className="modal-field big-spacer-top"
      >
        <a
          className="js-more text-muted note"
          href="#"
          onClick={[Function]}
        >
          more
        </a>
      </div>
    </div>
    <footer
      className="modal-foot"
    >
      <button
        disabled={false}
        id="create-project-submit"
        type="submit"
      >
        create
      </button>
      <a
        href="#"
        id="create-project-cancel"
        onClick={[Function]}
      >
        cancel
      </a>
    </footer>
  </form>
</Modal>
`;

exports[`shows more 2`] = `
<Modal
  contentLabel="modal form"
  onRequestClose={[MockFunction]}
>
  <form
    id="create-project-form"
    onSubmit={[Function]}
  >
    <header
      className="modal-head"
    >
      <h2>
        qualifiers.create.TRK
      </h2>
    </header>
    <div
      className="modal-body"
    >
      <div
        className="modal-field"
      >
        <label
          htmlFor="create-project-name"
        >
          name
          <em
            className="mandatory"
          >
            *
          </em>
        </label>
        <input
          autoFocus={true}
          id="create-project-name"
          maxLength={2000}
          name="name"
          onChange={[Function]}
          required={true}
          type="text"
          value=""
        />
      </div>
      <div
        className="modal-field"
      >
        <label
          htmlFor="create-project-key"
        >
          key
          <em
            className="mandatory"
          >
            *
          </em>
        </label>
        <input
          id="create-project-key"
          maxLength={400}
          name="key"
          onChange={[Function]}
          required={true}
          type="text"
          value=""
        />
      </div>
      <div
        className="modal-field"
      >
        <label>
          visibility
        </label>
        <VisibilitySelector
          className="little-spacer-top"
          onChange={[Function]}
          visibility="public"
        />
        <div
          className="spacer-top"
        >
          <UpgradeOrganizationBox
            organization="org"
          />
        </div>
      </div>
      <div
        className="modal-field big-spacer-top"
      >
        <label
          htmlFor="create-project-branch"
        >
          branch
        </label>
        <input
          autoFocus={true}
          id="create-project-branch"
          maxLength={200}
          name="branch"
          onChange={[Function]}
          type="text"
          value=""
        />
      </div>
    </div>
    <footer
      className="modal-foot"
    >
      <button
        disabled={false}
        id="create-project-submit"
        type="submit"
      >
        create
      </button>
      <a
        href="#"
        id="create-project-cancel"
        onClick={[Function]}
      >
        cancel
      </a>
    </footer>
  </form>
</Modal>
`;
